# python-lib-template

./: .gitignore  README.md  cookiecutter.json  release.py  run_test.sh
.github/workflows/: main.yaml
tests/: test_lib.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  release.py  requirements-test.txt  run_test.sh  setup.py  {% if cookiecutter.package_type == "docker" %}Dockerfile{% endif %}  {% if cookiecutter.package_type == "docker" %}docker-compose.yaml{% endif %}
{{ cookiecutter.project_slug }}/.github/: pull_request_template.md
{{ cookiecutter.project_slug }}/.github/workflows/: main.yaml  main.yml  publish.yaml  test.yaml
{{ cookiecutter.project_slug }}/tasks/: __init__.py  helpers.py  publish.py  release.py  {% if cookiecutter.package_type == "docker" %}run.py{% endif %}
{{ cookiecutter.project_slug }}/tests/: test_version.py
{{ cookiecutter.project_slug }}/tools/: publish.py
